--- a/src/poiupv/vistes/Registre.fxml
+++ b/src/poiupv/vistes/Registre.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="737.0" prefWidth="699.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.RegistreController">
+<BorderPane prefHeight="737.0" prefWidth="699.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.RegistreController">
    <top>
       <HBox prefHeight="115.0" prefWidth="996.0" style="-fx-background-color: #006db5;" BorderPane.alignment="TOP_CENTER">
          <children>
@@ -34,7 +34,7 @@
          </BorderPane.margin>
       </HBox>
    </top>
-   <left>
+   <center>
       <Pane prefHeight="678.0" prefWidth="994.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
          <effect>
             <DropShadow />
@@ -225,8 +225,8 @@
                   </HBox>
                </children>
             </VBox>
-            <ImageView fx:id="imagePerfil" fitHeight="200.0" fitWidth="170.0" layoutX="439.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="imagePerfil" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" x="452.0" y="34.0" />
          </children>
       </Pane>
-   </left>
+   </center>
 </BorderPane>
