--- a/src/poiupv/vistes/resultats.fxml
+++ b/src/poiupv/vistes/resultats.fxml
@@ -1,33 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="350.0" prefWidth="493.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="poiupv.controladors.ResultatsController">
+<AnchorPane id="AnchorPane" prefHeight="469.0" prefWidth="642.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.ResultatsController">
    <children>
-      <VBox prefHeight="359.0" prefWidth="498.0">
+      <Pane layoutX="29.0" layoutY="83.0" prefHeight="352.0" prefWidth="577.0" style="-fx-background-color: white;">
          <children>
-            <HBox prefHeight="89.0" prefWidth="498.0" style="-fx-background-color: #006db5;">
+            <HBox prefHeight="352.0" prefWidth="578.0">
                <children>
-                  <Text fill="WHITE" nodeOrientation="RIGHT_TO_LEFT" strokeType="OUTSIDE" strokeWidth="0.0" text="Resultats">
-                     <font>
-                        <Font name="System Bold" size="32.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="30.0" top="20.0" />
-                     </HBox.margin>
-                  </Text>
+                  <ListView fx:id="listSesions" prefHeight="352.0" prefWidth="572.0" />
+                  <VBox prefHeight="272.0" prefWidth="491.0">
+                     <children>
+                        <HBox prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Encerts:">
+                                 <HBox.margin>
+                                    <Insets left="20.0" top="20.0" />
+                                 </HBox.margin>
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                              </Text>
+                              <Label fx:id="encerts" text="Label">
+                                 <HBox.margin>
+                                    <Insets left="105.0" top="25.0" />
+                                 </HBox.margin>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Falllades:">
+                                 <HBox.margin>
+                                    <Insets left="20.0" top="20.0" />
+                                 </HBox.margin>
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                              </Text>
+                              <Label fx:id="fallades" text="Label">
+                                 <HBox.margin>
+                                    <Insets left="95.0" top="25.0" />
+                                 </HBox.margin>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Data ultima sesió:">
+                                 <HBox.margin>
+                                    <Insets left="20.0" top="20.0" />
+                                 </HBox.margin>
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                              </Text>
+                              <Label fx:id="sesio" text="Label">
+                                 <HBox.margin>
+                                    <Insets left="24.0" top="25.0" />
+                                 </HBox.margin>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <VBox prefHeight="71.0" prefWidth="498.0">
+                           <children>
+                              <Button mnemonicParsing="false" onAction="#tancarBoto" text="Tancar">
+                                 <VBox.margin>
+                                    <Insets left="100.0" />
+                                 </VBox.margin>
+                              </Button>
+                           </children>
+                        </VBox>
+                     </children>
+                  </VBox>
                </children>
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
             </HBox>
          </children>
-      </VBox>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Pane>
+      <HBox layoutY="-7.0" prefHeight="70.0" prefWidth="642.0" style="-fx-background-color: #006db5;">
+         <children>
+            <Text fill="WHITE" nodeOrientation="RIGHT_TO_LEFT" strokeType="OUTSIDE" strokeWidth="0.0" text="Resultats">
+               <font>
+                  <Font name="System Bold" size="32.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="30.0" top="15.0" />
+               </HBox.margin>
+            </Text>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
