--- a/src/poiupv/vistes/ModificarPerfil.fxml
+++ b/src/poiupv/vistes/ModificarPerfil.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.ModificarPerfilController">
+<BorderPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.ModificarPerfilController">
    <top>
       <HBox alignment="CENTER_LEFT" style="-fx-background-color: #1877f2;" BorderPane.alignment="CENTER_LEFT">
          <children>
@@ -34,7 +34,7 @@
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <BorderPane.margin>
-            <Insets left="20.0" right="20.0" top="20.0" />
+            <Insets left="20.0" right="40.0" top="20.0" />
          </BorderPane.margin>
          <children>
             <Label text="Contrasenya:">
